--- a/index.html
+++ b/index.html
@@ -18,26 +18,18 @@
     </select>
   </header>
   <main>
-    <template id="photo-template">
-
-      <ul>
-        <li>
-          <h2>UniWhale</h2>
-          <img
-            src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg"
-            alt="uniwhale">
-          <p>A unicorn and a narwhal nuzzling their horns</p>
-        </li>
-      </ul>
-    </template>
-  </main>
+   <section id="photo-template">
+      <h2></h2>
+      <img src="" alt="">
+      <p></p>
+    </section> 
+   </main>
   <footer>
     &copy; 2018 Code Fellows
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="data/page-1.json" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
