--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <h1>The Gallery of Horns</h1>
-    <select>
+    <select id="options">
       <option value="default">Filter by Keyword</option>
     </select>
   </header>
@@ -24,12 +24,13 @@
       <p></p>
     </section> 
    </main>
-  <footer>
+    <footer>
     &copy; 2018 Code Fellows
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
+
 </body>
 
 </html>
