--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>The Gallery of Horns</h1>
     <select id="options">
-      <option id="dropdown" value="default">Filter by Keyword</option>
+      <option value="default">Filter by Keyword</option>
     </select>
   </header>
   <main>
