--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layouts.css">
   <link rel="stylesheet" href="css/modules.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.1.0/mustache.min.js"
+  integrity="sha512-HYiNpwSxYuji84SQbCU5m9kHEsRqwWypXgJMBtbRSumlx1iBB6QaxgEBZHSHEGM+fKyCX/3Kb5V5jeVXm0OglQ=="
+  crossorigin="anonymous"></script>
+<script id="photo-template" type="text/x-tmpl-mustache">
+  <div class="{{keyword}}">
+    <h2>{{ name }}</h2>
+    <img src="{{image_url}}" alt="{{title}}" />
+    <p>{{ description }}</p>
+  <div>
+  </script>
+  
 </head>
 
 <body>
@@ -18,17 +29,14 @@
     </select>
   </header>
   <main>
-   <section id="photo-template">
-      <h2></h2>
-      <img src="" alt="">
-      <p></p>
-    </section> 
+
    </main>
     <footer>
     &copy; 2018 Code Fellows
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="data/page-1.json"></script>
   <script src="js/app.js"></script>
 
 </body>
