--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
   <header>
     <h1>The Gallery of Horns</h1>
+    <button>Page 1</button>
+    <button>Page 2</button>
     <select id="options">
       <option value="default">Filter by Keyword</option>
     </select>
@@ -27,8 +29,8 @@
     <footer>
     &copy; 2018 Code Fellows
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.1.0/mustache.min.js" integrity="sha512-HYiNpwSxYuji84SQbCU5m9kHEsRqwWypXgJMBtbRSumlx1iBB6QaxgEBZHSHEGM+fKyCX/3Kb5V5jeVXm0OglQ==" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
 
 </body>
