--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layouts.css">
   <link rel="stylesheet" href="css/modules.css">
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,14 +20,11 @@
   </header>
   <main>
     <template id="photo-template">
-
       <ul>
         <li>
-          <h2>UniWhale</h2>
-          <img
-            src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg"
-            alt="uniwhale">
-          <p>A unicorn and a narwhal nuzzling their horns</p>
+          <h2></h2>
+          <img>
+          <p></p>
         </li>
       </ul>
     </template>
@@ -37,7 +35,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="data/page-1.json" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
