--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="css/layouts.css">
   <link rel="stylesheet" href="css/modules.css">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+  <script id="photo-template" type="text/x-tmpl-mustache">
+    <div class="{{keyword}}"> 
+        <h2>{{ name }}</h2>
+        <img src="{{image_url}}" alt="{{title}}"/>
+        <p>{{description}}</p>
+    </div>
+  </script>
 </head>
 
 <body>
@@ -17,21 +24,17 @@
     <select id="options">
       <option value="default">Filter by Keyword</option>
     </select>
+    <button class="change-page">Change Image Selection</button>
+    <button class="sort">Sort Alphabetically</button>
+    <button class="sort">Sort by Number of Horns</button>
   </header>
   <main>
-    <template id="photo-template">
-      <ul>
-        <li>
-          <h2></h2>
-          <img>
-          <p></p>
-        </li>
-      </ul>
-    </template>
+
   </main>
   <footer>
     &copy; 2018 Code Fellows
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.1.0/mustache.min.js" integrity="sha512-HYiNpwSxYuji84SQbCU5m9kHEsRqwWypXgJMBtbRSumlx1iBB6QaxgEBZHSHEGM+fKyCX/3Kb5V5jeVXm0OglQ==" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="data/page-1.json" crossorigin="anonymous"></script>
